--- a/prototype_01/index.html
+++ b/prototype_01/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 
