--- a/prototype_01/sketch_01/index.html
+++ b/prototype_01/sketch_01/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<canvas id="my-canvas" width="100" height="100"></canvas>
-	<script language="javascript" type="text/javascript" src="core.js"></script>
+	<script language="javascript" type="text/javascript" src="../core.js"></script>
 	<script language="javascript" type="text/javascript" src="sketch.js"></script>
 
 </body>
